# clinic-app

./: .env-example  .gitignore  README.md  config.yml  docker-compose.yml  init_letsencrypt.sh  pyproject.toml
clinic_app/backend/: csv_files.py  utils.py
clinic_app/frontend/telegram_bot/: contants.py  main.py  scheduler.py  states.py
clinic_app/frontend/telegram_bot/handlers/: __init__.py
clinic_app/frontend/telegram_bot/keyboard/reply/: __init__.py  phone.py
clinic_app/frontend/whatsapp_bot/: __init__.py  constants.py  green_api.py  main.py  scheduler.py  states.py  utils.py
clinic_app/frontend/whatsapp_bot/handlers/: __init__.py
clinic_app/shared/: __init__.py  config.py
docker/nginx/: app.conf
