[tool.poetry]
name = "clinic-app"
version = "0.1.0"
description = "Bots for communication between clients and medical clinic"
authors = ["devtolmachev <dev.tolmachev@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
apscheduler = "^3.10.4"
envyaml = "^1.10.211231"
aioftp = "^0.22.3"
pandas = "^2.2.2"
loguru = "^0.7.2"
whatsapp-chatbot-python = "^0.9.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.7"


[tool.poetry.group.tests.dependencies]
docker = "^7.1.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
